[package]
name = "wally"
version = "0.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
bitcoin = "0.23.0"
elements = "0.12.1"
libc = "0.2.69"
wally-sys = { git= "https://github.com/RCasatta/wally-sys" }